Bug 161865 - Base's Table Design View and Create View not editable anymore (Windows)
Summary: Base's Table Design View and Create View not editable anymore (Windows)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
24.8.0.0 beta1+
Hardware: x86-64 (AMD64) Windows (All)
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0 target:24.8.0.2
Keywords: bibisected, bisected, regression
: 162066 (view as bug list)
Depends on:
Blocks: Database-Tables
  Show dependency treegraph
 
Reported: 2024-07-02 09:56 UTC by HTK300
Modified: 2024-07-25 05:33 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot to edit Tables (56.53 KB, image/jpeg)
2024-07-02 09:57 UTC, HTK300
Details
screenshot of empty table (10.89 KB, image/jpeg)
2024-07-02 09:58 UTC, HTK300
Details
Screenshot showing the issue (69.11 KB, image/png)
2024-07-02 22:04 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description HTK300 2024-07-02 09:56:48 UTC
Description:
when trying to edit the table of a HSQLDB database, the [Field Name] [Field Type] [Descrioption] should be shown and editable in columns as in LO V7.6 and earlier, but they are not

Steps to Reproduce:
1. open an existing odb Database file
2. click on Tables on the left pane
3. right click on your table to edit the structure
4. nothing will appear

Actual Results:
the screen is empty.
When trying to edit the table of a database, the [Field Name] [Field Type] [Descrioption] are not shown/editable in columns as in LO V7.6 and earlier

Expected Results:
when trying to edit the table of a database, the [Field Name] [Field Type] [Descrioption] should be shown and editable in columns as in LO V7.6 and earlier


Reproducible: Always


User Profile Reset: No

Additional Info:
recently installed — KB5039299 (OS Build 19045.4598) Preview
Comment 1 HTK300 2024-07-02 09:57:40 UTC
Created attachment 195080 [details]
screenshot to edit Tables

screenshot to edit Tables
Comment 2 HTK300 2024-07-02 09:58:44 UTC
Created attachment 195081 [details]
screenshot of empty table

screenshot of empty table
Comment 3 HTK300 2024-07-02 10:17:22 UTC
Version: 7.6.7.2 (X86_64) / LibreOffice Community
Build ID: dd47e4b30cb7dab30588d6c79c651f218165e3c5
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL threaded
Comment 4 HTK300 2024-07-02 10:18:46 UTC
this is the troublemaker !

Version: 24.8.0.0.beta1 (X86_64) / LibreOffice Community
Build ID: 318462181c709ed29c01eb3239b4d600d7b82ecc
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL threaded
Comment 5 Robert Großkopf 2024-07-02 12:56:21 UTC
Have opened a table of internal HSQLDB for editing.
Could see all entries, but couldn't change any entry.
Only possibility is to add new entries or to delete old entries.

Version: 24.8.0.0.beta1 (X86_64) / LibreOffice Community
Build ID: 318462181c709ed29c01eb3239b4d600d7b82ecc
CPU threads: 6; OS: Linux 6.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

All works well with LO 24.2.4.2 on the same system.

Have switched the title of this bug to show only one bug: Isn't editable.
Comment 6 Robert Großkopf 2024-07-02 13:00:16 UTC
Tested again. Have tested erroneously first with an external HSQLDB. 
With internal HSQLDB all works well. So I can't confirm the buggy behavior.
Comment 7 m_a_riosv 2024-07-02 22:03:44 UTC
Reproducible
Version: 24.8.0.0.beta1 (X86_64) / LibreOffice Community
Build ID: 318462181c709ed29c01eb3239b4d600d7b82ecc
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
and
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bff48f885e3aad560776a42e451a735ed6c72c57
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

With internal Firebird or HSQLDB

Not reproducible with
Version: 24.2.4.2 (X86_64) / LibreOffice Community
Build ID: 51a6219feb6075d9a4c46691dcfe0cd9c4fff3c2
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 8 m_a_riosv 2024-07-02 22:04:19 UTC
Created attachment 195092 [details]
Screenshot showing the issue
Comment 9 m_a_riosv 2024-07-04 08:20:41 UTC
Let's raise the importance, it's no possible to create or edit a database with this issue.
Comment 10 Buovjaga 2024-07-12 16:26:44 UTC
I repro with a Windows daily master build, but strangely not with the latest commits of 24.8 or 25.2 bibisect repos. On Linux everything works fine.
Comment 11 Stéphane Guillou (stragu) 2024-07-17 06:58:52 UTC
*** Bug 162066 has been marked as a duplicate of this bug. ***
Comment 12 Stéphane Guillou (stragu) 2024-07-17 07:06:21 UTC
I can reproduce with a brand new database, using the defaults (embedded HSQLDB), in the 24.8 RC1. It affects both Table Design View and Create View.

Version: 24.8.0.0.beta1 (X86_64) / LibreOffice Community
Build ID: 318462181c709ed29c01eb3239b4d600d7b82ecc
CPU threads: 4; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Comment 13 Stéphane Guillou (stragu) 2024-07-17 07:09:43 UTC
(In reply to Stéphane Guillou (stragu) from comment #12)
> I can reproduce with a brand new database, using the defaults (embedded
> HSQLDB), in the 24.8 RC1.
Sorry, I meant beta 1, but prashantchanchal777 can reproduce with RC1 in duplicate bug 162066.
Comment 14 jcsanz 2024-07-17 09:51:42 UTC
The problem exists also in other connections different than HSQL/Firebird (for example MariaDB), so the title shouldn't reflect any database name
Comment 15 Xisco Faulí 2024-07-18 21:11:59 UTC
I can reproduce it if I build with --enable-mergelibs=more
@Noel, I thought you might be interested in this issue
Comment 16 Xisco Faulí 2024-07-19 08:27:08 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2024-03-05 13:58:37 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2024-03-05 18:31:35 +0100
commit bacb92275c0c474d09146c0409cb547aef6551cf (patch)
tree fdda8289ab70c6aec5beddaa9681db18ca5670b4
parent 74a31f1b262f9770409ee68e04433adb7e3ab10c (diff)
add dbu to --enable-mergelibs=more
Comment 17 Xisco Faulí 2024-07-23 12:33:44 UTC
Issue not reproducible on mac when building with --enable-mergelibs=more
Comment 18 Commit Notification 2024-07-24 14:44:11 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ab704c00fd7a80e412b00cce9a8fb64e8937cc15

tdf#161865 Base Table Design View not editable

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2024-07-24 15:44:21 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/43c15054a33fdd7d543f26dc9a46a6ba93d3271b

tdf#161865 Base Table Design View not editable

It will be available in 24.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2024-07-24 19:40:12 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e22dfeef0c0bfb4ed11ae08b2331a0103384f3f5

related tdf#161865: fix another ODR violation

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2024-07-25 05:33:33 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/789bc2e858f1ed5c05e4b83b41399289d481bddb

related tdf#161865: fix another ODR violation

It will be available in 24.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.