tdf#161865 Base Table Design View not editable

we had an ODR violation with a constant named PROPERTY_DATASOURCE which
is also defined inside dbaccess

regression from
commit bacb92275c0c474d09146c0409cb547aef6551cf
"add dbu to --enable-mergelibs=more"

Change-Id: I315ba82e0bccc49e01bd6a438b7e671b971410dc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170939
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit ab704c00fd7a80e412b00cce9a8fb64e8937cc15)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170948